--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -31,19 +31,39 @@ h1 {
     justify-content: space-evenly
   }
   
-  .calendarClick {
-    margin: 20px;
+.calendarClick {
+    /* margin: 20px;
     background: white;
     border-radius: 10px;
     width: 30%;
     height: 150px;
-    margin: 75px 0px;
-  }
-  
-  .calendar {
-    margin: 20px;
+    margin: 75px 0px; */
+    margin: 20px 0px 20px 20px;
     background:white;
     border-radius: 10px;
     width: 40%;
     height: 300px;
-  }
+}
+  
+.calendar {
+    margin: 20px 20px 20px 0px;
+    background:white;
+    border-radius: 10px;
+    width: 40%;
+    height: 300px;
+}
+
+.stats {
+    background: white;
+    border-radius: 10px;
+    width: 80%;    
+    margin: 20px auto;
+    padding: 20px;
+}
+
+.graph {
+    height: 300px;
+    background: #CCCCCC;
+    border-radius: 10px;
+    width: 40%;
+}
