--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -28,42 +28,51 @@ h1 {
 
 .flex {
     display: flex;
-    justify-content: space-evenly
+    justify-content: space-evenly;
+    flex: wrap;
   }
+
+.calContainer {
+    width: 100%;
+    justify-content: space-between
+}
   
 .calendarClick {
-    /* margin: 20px;
-    background: white;
-    border-radius: 10px;
-    width: 30%;
-    height: 150px;
-    margin: 75px 0px; */
-    margin: 20px 0px 20px 20px;
+    margin-top:10px;
     background:white;
     border-radius: 10px;
-    width: 40%;
+    width: 44%;
     height: 300px;
 }
   
 .calendar {
-    margin: 20px 20px 20px 0px;
+    margin-top:10px;
     background:white;
     border-radius: 10px;
-    width: 40%;
+    width: 55%;
     height: 300px;
 }
 
 .stats {
     background: white;
     border-radius: 10px;
-    width: 80%;    
-    margin: 20px auto;
+    width: 100%;    
+    margin: 10px auto;
     padding: 20px;
 }
 
 .graph {
-    height: 300px;
     background: #CCCCCC;
     border-radius: 10px;
     width: 40%;
+}
+
+a {
+    float: right;
+    margin-right: 10px
+}
+
+.container {
+    width: 80%;
+    margin-left: 5%
 }
