--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,3 +14,12 @@ body {
   margin-left: 10%;
   padding-top: 10px
 }
+
+footer {
+  background: #008c90;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 50px 5px 50px;
+  color: white;
+
+}
