--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Arimo', sans-serif;
   background: #d0e8e3
 }
 
@@ -20,6 +20,10 @@ footer {
   display: flex;
   justify-content: space-between;
   padding: 25px 50px 5px 50px;
-  color: white;
-
+  color: white
 }
+
+footer p {
+  opacity: .75
+}
+
