--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -63,14 +63,14 @@ h1 {
 
 .graph {
     background: #CCCCCC;
-    height: 300px;
+    /* height: 300px; */
     border-radius: 10px;
-    width: 40%;
+    width: 48%;
 }
 
-a {
+i {
     float: right;
-    margin-right: 10px
+    margin-right: 5px
 }
 
 .container {
@@ -114,11 +114,10 @@ form {
 }
 
 .read {
-    background: grey;
+    background: lightgrey;
     border-radius: 10px;
     padding: 15px;
     margin: 5px;
-
 }
 
 .unread {
@@ -131,4 +130,10 @@ form {
 
 .from {
     margin-left: 70%;
+}
+
+.graphTitle {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
 }
