messages updates, can now delete and scrolls

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -88,6 +88,11 @@ i {
     text-align: left;
 }
 
+.scroll {
+    max-height: 700px;
+    overflow-y:auto;
+}
+
 form {
     padding: 20px;
 }
@@ -137,4 +142,8 @@ form {
     display: flex;
     justify-content: space-between;
     padding: 10px;
+}
+
+.none {
+    text-align: center;
 }
