--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arimo', sans-serif;
-  background: white;
+  background: #d0e8e3;
 }
 
 .navbar {
@@ -22,7 +22,7 @@ body {
 }
 
 footer {
-  background: black;
+  background: #008c90;
   display: flex;
   justify-content: space-between;
   padding: 25px 50px 5px 50px;
