pulling from master

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -158,3 +158,10 @@ form {
     display: flex;
     justify-content: flex-start
 }
+.containerResources{
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 10%;
+    background: white;
+    border-radius: 10px;
+}
