--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -63,7 +63,7 @@ h1 {
 }
 
 .graph {
-    background: #CCCCCC;
+    background: white;
     /* height: 300px; */
     border-radius: 10px;
     width: 48%;
@@ -121,7 +121,7 @@ form {
 }
 
 .read {
-    background: lightgrey;
+    background: white;
     border-radius: 10px;
     padding: 15px;
     margin: 5px;
