--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,16 +8,16 @@ body {
 
 .navbar {
   background: #008c90;
-  /* width: 100%;
-  position: fixed;
-   z-index: 1;
-   color:#008c90;
-  padding-top: -10px; */
+  /* width: 100%; */
+  /* position: fixed; */
+   /* z-index: 1; */
+   /* color:#008c90; */
+  /* padding-top: -10px; */
 }
 
 .nameHeader {
   float: left;
-  
+  color: lightgrey;
   padding-top: 10px
 }
 
@@ -26,3 +26,14 @@ body {
 
 }
 
+footer {
+  background: #008c90;
+  display: flex;
+  justify-content: space-between;
+  padding: 25px 50px 5px 50px;
+  color: white
+}
+
+footer p {
+  opacity: .75
+}
