splash page initial creation

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -19,7 +19,8 @@ button {
 
 .signupL {
     display: flex;
-    justify-content: center
+    justify-content: center;
+    /* width: 40% */
 }
 
 h1 {
