got to show the current weight on the home page

--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -76,7 +76,8 @@ i {
 }
 
 .container {
-    width: 80%;
+    width: 100%;
+    
     margin-left: 5%
 }
 
@@ -167,4 +168,7 @@ form {
  margin-left: 10%;
  margin-top: 50px;
  border-radius: 10px;
+}
+#calendarContent{
+    width: 100%;
 }
