updated the css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,16 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
+} */
 
 .App-header {
-  background-color: #222;
-  height: 100px;
-  padding: 20px;
-  color: black;
+  clear: both;
+  font-family: 'Playfair Display', serif;
+  font-weight: normal;
+  font-size: 30px;
 }
 
 .App-intro {
@@ -25,18 +25,18 @@
 
 
 .navbar {
-  background: white;
+  background: grey;
 
   
 }
 #navbar-brand{
-  color: black;
+  color: white;
   font-family: 'Playfair Display', serif;
   /* font-weight: normal; */
   font-size: 25px;
 }
 #navBarLinks{
-  color: black;
+  color: white;
   font-family: 'Playfair Display', serif;
   /* font-weight: normal; */
   /* font-size: 25px; */
@@ -46,7 +46,7 @@ img {
   height: 40px;
 }
 .nav-link{
-  color: black;
+  color: white;
 }
 
 
