--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -171,14 +171,22 @@ form {
     justify-content: flex-start
 }
 .containerRes{
- background: grey;
- display: flex;
+ background: white;
+ /* display: flex; */
  justify-content: space-between;
- padding: 10px;
- width: 100%;
+ /* padding: 10px; */
+ width: 80%;
  margin-left: 10%;
  margin-top: 50px;
- border-radius: 10px;
+ /* border-radius: 10px; */
  height: auto;
+ clear: both;
+}
+.fitresources{
+    text-align: center;
+    font-family: 'Playfair Display', serif;
+    font-weight: normal;
+    font-size: 30px;
+   
 }
 /* style="height:150px;margin:auto;"  */
