--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -4,7 +4,9 @@
     border-radius: 10px;
 }
 
-
+p {
+    font-weight: bold;
+}
 
 input.name {
     width: 300px;
@@ -62,9 +64,9 @@ h1 {
 }
 
 .graph {
-    background: white;
+    background: #CCCCCC;
     /* height: 300px; */
-    /* border-radius: 10px; */
+    border-radius: 10px;
     width: 48%;
 }
 
@@ -119,7 +121,7 @@ form {
 }
 
 .read {
-    background: white;
+    background: lightgrey;
     border-radius: 10px;
     padding: 15px;
     margin: 5px;
@@ -156,4 +158,3 @@ form {
     display: flex;
     justify-content: flex-start
 }
-
