--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -168,3 +168,30 @@ form {
  margin-top: 50px;
  border-radius: 10px;
 }
+
+.signupPage {
+    padding-top: 5%;
+}
+
+.fitnessTracker {
+    color: #008c90;
+    font-size: 100px;
+    font-family: "impact";
+    font-style: italic;
+}
+
+.left {
+    text-align: left;
+}
+
+.center {
+    text-align: center;
+}
+
+.create {
+    background: #CCCCCC;
+    margin: 20px auto;
+    padding: 20px;
+    border-radius: 10px;
+
+}
