--- a/client/src/pages/style.css
+++ b/client/src/pages/style.css
@@ -9,6 +9,8 @@
   text-align: center;
   font-family: "Playfair Display", serif;
   font-weight: normal;
+  padding:10px;
+
 }
 .profileEdit {
   margin-left: 10px;
@@ -52,7 +54,7 @@ h1 {
   margin-top: 10px;
   background: white;
   /* border-radius: 10px; */
-  width: 44%;
+  width: 80%;
   height: 300px;
 }
 
@@ -61,14 +63,18 @@ h1 {
   margin: 20px 0px;
   background: white;
   /* border-radius: 10px; */
-  /* width: 55%; */
+ 
   height: auto;
   font-family: "Playfair Display", serif;
   font-weight: normal;
+ 
+ 
+  padding: 15px;
+ 
 }
 
 .stats {
-  clear: both;
+  /* clear: both; */
   background: whitesmoke;
   /* border-radius: 10px; */
   width: 100%;
@@ -78,11 +84,11 @@ h1 {
 }
 
 .graph {
-  clear: both;
-  background: whitesmoke;
+  /* clear: both;
+  background: whitesmoke; */
   /* height: 300px; */
   /* border-radius: 10px; */
-  width: 80%;
+  width: 100%;
   height: auto;
 }
 
@@ -93,6 +99,7 @@ i {
 }
 
 .container {
+  
   width: 100%;
   height: auto;
 
@@ -107,11 +114,14 @@ i {
   /* border-radius: 10px; */
   width: 80%;
   margin: 10px auto;
-  padding: 20px;
+  padding: 15px;
   text-align: left;
   height: auto;
 
  
+}
+.margin-top{
+  padding:20px;
 }
 .messagingSignUp{
     background: white;
